--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "types": "./typings"
   },
   "scripts": {
-    "bootstrap": "sh scripts/bootstrap.sh"
+    "bootstrap": "sh scripts/bootstrap.sh",
+    "docs-to-interface": "sh scripts/run-ts-script.sh docs-to-interface"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@commitlint/types": "^17.4.4",
+    "@inquirer/prompts": "^3.0.2",
+    "@swc/core": "^1.3.75",
+    "@swc/helpers": "^0.5.1",
     "@types/node": "^18.15.0",
+    "fast-xml-parser": "^4.2.7",
     "husky": "^8.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
