docs: 添加文档站点和部署流程

--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   "scripts": {
     "bootstrap": "sh scripts/bootstrap.sh",
     "build": "sh scripts/build.sh",
-    "docs-to-interface": "sh scripts/run-ts-script.sh docs-to-interface"
+    "docs-to-interface": "sh scripts/run-ts-script.sh docs-to-interface",
+    "generate-api-docs": "sh scripts/run-ts-script.sh generate-api-docs",
+    "docs:dev": "vitepress dev docs --port 8771",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
@@ -35,7 +39,8 @@
     "husky": "^8.0.3",
     "ts-node": "^10.9.1",
     "tsconfig": "^7.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitepress": "1.0.0-rc.4"
   },
   "repository": {
     "url": "https://github.com/DevOpen-Club/api-node-sdk"
