--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@microsoft/tsdoc-config": "^0.16.2",
     "@swc/core": "^1.3.75",
     "@swc/helpers": "^0.5.1",
+    "@types/json-bigint": "^1.0.1",
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
@@ -47,5 +48,9 @@
   },
   "homepage": "https://github.com/DevOpen-Club/api-node-sdk",
   "author": "DevOpen Club",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.4.0",
+    "json-bigint": "^1.0.0"
+  }
 }
