--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@swc/helpers": "^0.5.1",
     "@types/json-bigint": "^1.0.1",
     "@types/node": "^18.15.0",
+    "@types/qs": "^6.9.7",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint-plugin-tsdoc": "^0.2.17",
@@ -51,6 +53,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
-    "json-bigint": "^1.0.0"
+    "json-bigint": "^1.0.0",
+    "qs": "^6.11.2",
+    "uuid": "^9.0.0"
   }
 }
