--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,9 +20,12 @@ jobs:
         uses: pnpm/action-setup@v2
         with:
           version: 8.3.1
-      - run: |
+      - name: 构建
+        run: |
           pnpm bootstrap
           pnpm build
+      - name: 部署
+        run: |
           npm ci
           npm publish
         env:
