--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,31 @@ on:
       - v*
   workflow_dispatch:
 jobs:
+  publish:
+    name: 发布 npm 包
+    environment:
+      name: npm
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18.15.0
+          registry-url: https://registry.npmjs.org
+      - name: 安装包管理器
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8.3.1
+      - name: 构建
+        run: |
+          pnpm bootstrap
+          pnpm build
+      - name: 部署
+        run: |
+          npm ci
+          npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.ACCESS_TOKEN }}
   build:
     name: 构建部署文档站点
     permissions:
