--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "bootstrap": "sh scripts/bootstrap.sh",
     "build": "sh scripts/build.sh",
+    "doc-gen": "sh scripts/run-ts-script.sh doc-gen",
     "docs-to-interface": "sh scripts/run-ts-script.sh docs-to-interface",
     "generate-api-docs": "sh scripts/run-ts-script.sh generate-api-docs",
     "docs:dev": "vitepress dev docs --port 8771",
@@ -42,8 +43,11 @@
     "husky": "^8.0.3",
     "ts-node": "^10.9.1",
     "tsconfig": "^7.0.0",
+    "typedoc": "^0.24.8",
+    "typedoc-plugin-markdown": "^3.15.4",
     "typescript": "^5.1.6",
-    "vitepress": "1.0.0-rc.4"
+    "vitepress": "1.0.0-rc.4",
+    "vue": "^3.3.4"
   },
   "repository": {
     "url": "https://github.com/DevOpen-Club/api-node-sdk"
