ci: 添加生成文档步骤

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,7 @@ jobs:
           pnpm bootstrap
       - name: 构建文档站点
         run: |
+          pnpm doc-gen
           pnpm docs:build
       - name: 部署到 Netlify
         id: deployment
