ci: 修复预览版文档构建失败的问题
修复 vite 构建预览版文档时报错 `dead links found`。

--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -37,7 +37,7 @@ jobs:
           pnpm bootstrap
       - name: 构建文档站点
         run: |
-          pnpm doc-gen:edge
+          pnpm doc-gen
           pnpm docs:build --base "/api-node-sdk/"
       - name: 设置环境
         uses: actions/configure-pages@v3
