feat: 添加事件监听方法

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^18.15.0",
     "@types/qs": "^6.9.7",
     "@types/uuid": "^9.0.2",
+    "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint-plugin-tsdoc": "^0.2.17",
@@ -57,8 +58,11 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
+    "js-base64": "^3.7.5",
     "json-bigint": "^1.0.0",
+    "mitt": "^3.0.1",
     "qs": "^6.11.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "ws": "^8.13.0"
   }
 }
