fix: 修复示例 tsconfig 包含的文件

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "ESNext",
     "moduleResolution": "Node"
   },
-  "include": ["*.ts"],
+  "include": ["src/*.ts"],
   "ts-node": {
     "swc": true,
     "esm": true
