--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "bootstrap": "sh scripts/bootstrap.sh",
     "build": "sh scripts/build.sh",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "doc-gen": "ts-node scripts/doc-gen.ts",
     "docs-to-interface": "ts-node scripts/docs-to-interface.ts",
     "generate-api-docs": "ts-node scripts/generate-api-docs.ts",
@@ -29,6 +30,8 @@
     "@microsoft/tsdoc-config": "^0.16.2",
     "@swc/core": "^1.3.75",
     "@swc/helpers": "^0.5.1",
+    "@swc/jest": "^0.2.29",
+    "@types/jest": "^29.5.5",
     "@types/json-bigint": "^1.0.1",
     "@types/node": "^18.15.0",
     "@types/qs": "^6.9.7",
@@ -36,9 +39,11 @@
     "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
+    "cross-env": "^7.0.3",
     "eslint-plugin-tsdoc": "^0.2.17",
     "fast-xml-parser": "^4.2.7",
     "husky": "^8.0.3",
+    "jest": "^29.5.5",
     "ts-node": "^10.9.1",
     "tsconfig": "^7.0.0",
     "typedoc": "^0.24.8",
