chore: 修复 tsconfig

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
     "alwaysStrict": true,
     "module": "Node16",
-    "target": "ESNext",
-    "moduleResolution": "Node"
+    "target": "ESNext"
   },
   "include": ["src/*.ts"],
   "ts-node": {
