feat!: 添加第三方应用接口，重构请求流程

--- a/examples/package.json
+++ b/examples/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
-    "fanbook-api-node-sdk": "link:.."
+    "fanbook-api-node-sdk": "link:..",
+    "js-base64": "^3.7.5"
   }
 }
