chore: 修复示例依赖

--- a/examples/package.json
+++ b/examples/package.json
@@ -1,7 +1,6 @@
 {
   "type": "module",
   "dependencies": {
-    "fanbook-api-node-sdk": "link:..",
-    "js-base64": "^3.7.5"
+    "fanbook-api-node-sdk": "link:.."
   }
 }
