--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
   "homepage": "https://fanbook-api-sdk.js.org/",
   "author": "DevOpen Club",
   "license": "MIT",
+  "publishConfig": {
+    "provenance": true
+  },
   "dependencies": {
     "axios": "^1.6.0",
     "js-base64": "^3.7.5",
