--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "packageManager": "pnpm@8.3.1",
   "main": "./lib/index.js",
   "module": "./es/index.js",
+  "types": "./typings/index.d.ts",
   "files": [
     "/lib",
     "/es",
@@ -41,13 +42,11 @@
     "cross-env": "^7.0.3",
     "eslint-plugin-tsdoc": "^0.2.17",
     "fast-xml-parser": "^4.3.2",
-    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "ts-node": "^10.9.1",
-    "tsconfig": "^7.0.0",
     "typedoc": "^0.24.8",
     "typedoc-plugin-markdown": "^3.17.1",
-    "typescript": "^5.2.2",
+    "typescript": "^5.1.6",
     "vitepress": "1.0.0-rc.31",
     "vue": "^3.3.9"
   },
