--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "cross-env": "^7.0.3",
+    "eslint-plugin-jsdoc": "^46.9.1",
     "eslint-plugin-tsdoc": "^0.2.17",
     "fast-xml-parser": "^4.3.2",
     "jest": "^29.7.0",
