fix: 修复 bigint 解析错误；添加测试

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "is-plain-object": "^5.0.0",
     "js-base64": "^3.7.5",
     "json-bigint": "^1.0.0",
     "mitt": "^3.0.1",
