--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.6.3",
     "@inquirer/prompts": "^3.3.0",
     "@swc/core": "^1.3.100",
     "@swc/helpers": "^0.5.3",
@@ -34,11 +35,8 @@
     "@types/node": "^18.19.3",
     "@types/uuid": "^9.0.7",
     "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
     "cross-env": "^7.0.3",
-    "eslint-plugin-jsdoc": "^46.9.1",
-    "eslint-plugin-tsdoc": "^0.2.17",
+    "eslint": "^8.56.0",
     "fast-xml-parser": "^4.3.2",
     "jest": "^29.7.0",
     "ts-node": "^10.9.2",
