--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "fanbook-api-node-sdk",
-  "description": "Fanbook OpenAPI JavaScript / Node.js SDK",
   "version": "0.6.0",
   "packageManager": "pnpm@8.3.1",
+  "description": "Fanbook OpenAPI JavaScript / Node.js SDK",
+  "author": "DevOpen Club",
+  "license": "MIT",
+  "homepage": "https://fanbook-api-sdk.js.org/",
+  "repository": {
+    "url": "https://github.com/DevOpen-Club/api-node-sdk"
+  },
   "main": "./lib/index.js",
   "module": "./es/index.js",
   "types": "./typings/index.d.ts",
   "files": [
-    "/lib",
-    "/es",
-    "/typings",
-    "/README.md",
     "/CHANGELOG.md",
-    "/LICENSE"
+    "/LICENSE",
+    "/README.md",
+    "/es",
+    "/lib",
+    "/typings"
   ],
   "scripts": {
     "build": "sh scripts/build.sh",
@@ -23,6 +29,15 @@
     "docs:dev": "vitepress dev docs --port 8771",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
+  },
+  "dependencies": {
+    "axios": "^1.6.2",
+    "is-plain-object": "^5.0.0",
+    "js-base64": "^3.7.5",
+    "json-bigint": "^1.0.0",
+    "mitt": "^3.0.1",
+    "uuid": "^9.0.1",
+    "ws": "^8.15.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
@@ -46,22 +61,7 @@
     "vitepress": "1.0.0-rc.32",
     "vue": "^3.3.12"
   },
-  "repository": {
-    "url": "https://github.com/DevOpen-Club/api-node-sdk"
-  },
-  "homepage": "https://fanbook-api-sdk.js.org/",
-  "author": "DevOpen Club",
-  "license": "MIT",
   "publishConfig": {
     "provenance": true
-  },
-  "dependencies": {
-    "axios": "^1.6.2",
-    "is-plain-object": "^5.0.0",
-    "js-base64": "^3.7.5",
-    "json-bigint": "^1.0.0",
-    "mitt": "^3.0.1",
-    "uuid": "^9.0.1",
-    "ws": "^8.15.1"
   }
 }
