--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,6 +12,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - uses: actions/cache@v4
         with:
           path: ~/.pnpm
@@ -28,6 +31,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - uses: actions/cache@v4
         with:
           path: ~/.pnpm
