--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,7 +17,7 @@ jobs:
           version: 8
       - uses: actions/cache@v4
         with:
-          path: ~/.pnpm
+          path: node_modules
           key: dependencies
           restore-keys: dependencies
       - run: pnpm install
@@ -36,7 +36,7 @@ jobs:
           version: 8
       - uses: actions/cache@v4
         with:
-          path: ~/.pnpm
+          path: node_modules
           key: dependencies
           restore-keys: dependencies
       - run: pnpm install
