ci: PR 检查添加文档构建测试

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,11 +15,6 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 8
-      - uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: dependencies
-          restore-keys: dependencies
       - run: pnpm install
       - run: pnpm lint
 
@@ -34,10 +29,19 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 8
-      - uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: dependencies
-          restore-keys: dependencies
       - run: pnpm install
       - run: pnpm test
+
+  docs:
+    name: 文档构建测试
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+      - run: pnpm install
+      - run: pnpm docs:build
