--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
+    "@faker-js/faker": "^8.4.0",
     "@inquirer/prompts": "^3.3.0",
     "@swc/core": "^1.3.100",
     "@swc/helpers": "^0.5.3",
