--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: weekly
     ignore:
-      - dependency-name: @types/node
+      - dependency-name: '@types/node'
     groups:
       dependencies:
         patterns:
