chore: 修复 5aab4e3 合并时的意外修改

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,9 @@ updates:
     directory: /
     schedule:
       interval: weekly
-groups:
-  dependencies:
-    patterns:
-      - '*'
+    ignore:
+      - dependency-name: '@types/node'
+    groups:
+      dependencies:
+        patterns:
+          - '*'
