--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
     "@inquirer/prompts": "^4.0.0",
+    "@shikijs/vitepress-twoslash": "^1.2.0",
     "@swc/core": "^1.3.100",
     "@swc/helpers": "^0.5.3",
     "@swc/jest": "^0.2.29",
