docs: 修复 twoslash 显示的类型全部是 `any` 的问题

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "eslint .",
     "docs-to-interface": "ts-node scripts/docs-to-interface.ts",
     "docs:dev": "vitepress dev docs --port 8771",
-    "docs:build": "typedoc && vitepress build docs",
+    "docs:build": "pnpm build && typedoc && vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
