--- a/examples/package.json
+++ b/examples/package.json
@@ -1,9 +1,3 @@
 {
-  "type": "module",
-  "engines": {
-    "node": "~20"
-  },
-  "dependencies": {
-    "fanbook-api-node-sdk": "link:.."
-  }
+  "type": "module"
 }
