--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/ws": "^8.5.10",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
+    "fanbook-api-node-sdk": "link:.",
     "fast-xml-parser": "^4.3.2",
     "jest": "^29.7.0",
     "ts-node": "^10.9.2",
