--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,7 @@ updates:
     ignore:
       - dependency-name: '@types/node'
     groups:
-      dependencies:
-        patterns:
-          - '*'
+      production-dependencies:
+        dependency-type: production
+      development-dependencies:
+        dependency-type: development
