chore: 更新开发环境 Node.js 到 20；从 `ts-node` 迁移到 `tsx`

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "sh scripts/build.sh",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "lint": "eslint .",
-    "docs-to-interface": "ts-node scripts/docs-to-interface.ts",
+    "docs-to-interface": "tsx scripts/docs-to-interface.ts",
     "docs:dev": "vitepress dev docs --port 8771",
     "docs:build": "pnpm build && typedoc && vitepress build docs",
     "docs:preview": "vitepress preview docs"
@@ -47,7 +47,7 @@
     "@swc/jest": "^0.2.29",
     "@types/jest": "^29.5.11",
     "@types/json-bigint": "^1.0.4",
-    "@types/node": "^18.19.3",
+    "@types/node": "^20.11.28",
     "@types/uuid": "^9.0.7",
     "@types/ws": "^8.5.10",
     "cross-env": "^7.0.3",
@@ -55,7 +55,7 @@
     "fanbook-api-node-sdk": "link:.",
     "fast-xml-parser": "^4.3.2",
     "jest": "^29.7.0",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.7.1",
     "typedoc": "^0.25.7",
     "typedoc-plugin-markdown": "^3.17.1",
     "typescript": "^5.1.6",
