--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -4,9 +4,5 @@
     "module": "Node16",
     "alwaysStrict": true
   },
-  "include": ["src/*.ts"],
-  "ts-node": {
-    "swc": true,
-    "esm": true
-  }
+  "include": ["src/*.ts"]
 }
