--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@inquirer/prompts": "^4.0.0",
     "@shikijs/vitepress-twoslash": "^1.2.0",
     "@swc/core": "^1.3.100",
