--- a/package.json
+++ b/package.json
@@ -30,38 +30,38 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.6.8",
     "is-plain-object": "^5.0.0",
-    "js-base64": "^3.7.5",
+    "js-base64": "^3.7.7",
     "json-bigint": "^1.0.0",
     "mitt": "^3.0.1",
     "uuid": "^9.0.1",
-    "ws": "^8.15.1"
+    "ws": "^8.16.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.6.3",
-    "@babel/preset-typescript": "^7.23.3",
-    "@inquirer/prompts": "^4.0.0",
+    "@antfu/eslint-config": "^2.9.0",
+    "@babel/preset-typescript": "^7.24.1",
+    "@inquirer/prompts": "^4.3.0",
     "@shikijs/vitepress-twoslash": "^1.2.0",
-    "@swc/core": "^1.3.100",
-    "@swc/helpers": "^0.5.3",
-    "@swc/jest": "^0.2.29",
-    "@types/jest": "^29.5.11",
+    "@swc/core": "^1.4.8",
+    "@swc/helpers": "^0.5.7",
+    "@swc/jest": "^0.2.36",
+    "@types/jest": "^29.5.12",
     "@types/json-bigint": "^1.0.4",
     "@types/node": "^20.11.28",
-    "@types/uuid": "^9.0.7",
+    "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.10",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "fanbook-api-node-sdk": "link:.",
     "fast-xml-parser": "^4.3.2",
     "jest": "^29.7.0",
     "tsx": "^4.7.1",
-    "typedoc": "^0.25.7",
-    "typedoc-plugin-markdown": "^3.17.1",
-    "typescript": "^5.1.6",
+    "typedoc": "^0.25.12",
+    "typedoc-plugin-markdown": "4.0.0-next.54",
+    "typescript": "^5.4.3",
     "vitepress": "^1.0.1",
-    "vue": "^3.3.12"
+    "vue": "^3.3.21"
   },
   "publishConfig": {
     "provenance": true
