fix: 修复 OAuth 2.0 接口 Content-Type 问题

--- a/examples/package.json
+++ b/examples/package.json
@@ -1,3 +1,9 @@
 {
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "fanbook-api-node-sdk": "link:.."
+  },
+  "devDependencies": {
+    "tsx": "^4.17.0"
+  }
 }
