--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fanbook-api-node-sdk",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "packageManager": "pnpm@8.15.0",
   "description": "Fanbook OpenAPI JavaScript / Node.js SDK",
   "author": "DevOpen Club",
@@ -13,12 +13,9 @@
   "module": "./es/index.js",
   "types": "./typings/index.d.ts",
   "files": [
-    "/CHANGELOG.md",
-    "/LICENSE",
-    "/README.md",
-    "/es",
-    "/lib",
-    "/typings"
+    "es",
+    "lib",
+    "typings"
   ],
   "scripts": {
     "build": "sh scripts/build.sh",
